--- a/webshop-backend/package.json
+++ b/webshop-backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mariadb": "^3.3.1",
-    "mongoose": "^8.5.2"
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7"
   }
 }
